syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message GetOrganizationsRequest {
  RequestMeta meta = 1;
}

message GetOrganizationsResponse {
  ResponseMeta meta = 1;
  repeated Organization organizations = 2;
}

message CreateOrganizationRequest {
  RequestMeta meta = 1;
  Organization organization = 2;
}

message CreateOrganizationResponse {
  ResponseMeta meta = 1;
}

message UpdateOrganizationRequest {
  RequestMeta meta = 1;
  Organization organization = 2;
}

message UpdateOrganizationResponse {
  ResponseMeta meta = 1;
}

message DeleteOrganizationRequest {
  RequestMeta meta = 1;
  Uuid id = 2;
}

message DeleteOrganizationResponse {
  ResponseMeta meta = 1;
}

message OrganizationMemberRequest {
  RequestMeta meta = 1;
  Uuid id = 2;
}

message OrganizationMemberResponse {
  ResponseMeta meta = 1;
  repeated User users = 2;
}

/* Manage organizations */
service OrganizationService {
  /* Get all the organizations for a user. All users automatically get a private (internal) organization */
  rpc Get(GetOrganizationsRequest) returns (GetOrganizationsResponse) {}
  /* Create a single organization */
  rpc Create(CreateOrganizationRequest) returns (CreateOrganizationResponse) {}
  /* Update a single organization */
  rpc Update(UpdateOrganizationRequest) returns (UpdateOrganizationResponse) {}
  /* Delete a single organization */
  rpc Delete(DeleteOrganizationRequest) returns (DeleteOrganizationResponse) {}
  /* Retrieve organization members */
  rpc Members(OrganizationMemberRequest) returns (OrganizationMemberResponse) {}
}
